force-app/main/default/objects/SPS_to_Lead_Field_Mapping__mdt.object
<CustomObject>
    <description>Maps Staged Prospective Student fields to Lead for Lead Explosion/Lead Nurturing</description>
    <fields>
        <fullName>Lead_Field__c</fullName>
        <description>Lead field being mapped to SPS field</description>
        <label>Lead Field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPS_field__c</fullName>
        <description>SPS field being mapped to Lead field</description>
        <label>SPS field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text_to_Boolean__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines whether we are mapping a text field from SPS into a Boolean field in Lead</description>
        <label>Text to Boolean</label>
        <type>Checkbox</type>
    </fields>
    <label>SPS to Lead Field Mapping</label>
    <pluralLabel>SPS to Lead Field Mappings</pluralLabel>
</CustomObject>